--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section>
     <div class="creator default_padding">Creator</div>
     <p>
-        Interested in creating
+        I love to swim
     </p>
     <p>
         "Quote"
