--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Personal Website</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="javascript.js"></script>
 </head>
+
 <body>
-     <header>
-        <h2> Ariana Bolton  </h2>
-        <nav>
-            <a href="index.html"> Home</a>
-            <a href="about.html"> About</a>
-            <a href="portfolio.html"> Portfolio</a>
-        </nav>
-    </header>
-  <section>
-    <div class="creator default_padding">Creator</div>
-    <p>
-        I love to swim
-    </p>
-    <p>
-        "Quote"
-    </p>
-    <img class="self_image" src="Images/Ari2.jpg" style="width: 250px;" height="330px">
+  <header>
+    <h2> Ariana Bolton </h2>
+    <nav>
+      <a href="index.html"> Home</a>
+      <a href="about.html"> About</a>
+      <a href="portfolio.html"> Portfolio</a>
+    </nav>
+  </header>
+  <section class="item_wrapper">
+    <div class="default_padding">
+      <h2 class="creator"> Creator</h2>
+      <p>
+        I love to swim not
+      </p>
+    </div>
+    <div class="img">
+      <img class="self_image" src="Images/Ari2.jpg" style="width: 250px;" height="330px">
+    </div>
   </section>
+  <p>
+    "Quote"
+  </p>
 </body>
+
 </html>
