--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="javascript.js"></script>
 </head>
+
 <body>
     <header>
         <h2> Ariana Bolton</h2>
@@ -13,10 +16,10 @@
             <a href="index.html"> Home</a>
             <a href="about.html"> About</a>
             <a href="portfolio.html"> Portfolio</a>
-        </nav>  
+        </nav>
     </header>
     <section class="padded_box">
-       <h2> My projects in no order</h2>
+        <h2> My projects in no order</h2>
         <div class="first">
             <h3>
                 The first project
@@ -25,7 +28,8 @@
                 I worked for the church daycare
             </p>
         </div>
-        <div class="first"></divclass>
+        <div class="first">
+            </divclass>
             <h3> My Second Project</h3>
             <p>
                 I worked at Opa
@@ -33,4 +37,5 @@
         </div>
     </section>
 </body>
+
 </html>
