about section formatted

--- a/about.html
+++ b/about.html
@@ -19,9 +19,40 @@
                 <a href="portfolio.html"> Portfolio</a>
             </nav>
         </header>
-        <section>
-            <div class="About"> About</div>
-
+        <h2 class="description" style="border-bottom: 2px solid black;"> Me in my personal time</h2>
+        <section class="about_sections">
+            <div>
+                <h2 class="individual_headings"> Spending time with loved ones
+                </h2>
+                <p>
+                    ladida
+                </p>
+            </div>
+            <div class="pics">
+                <IMG SRC="Images/photo_family.avif">
+            </div>
+        </section>
+        <section class="about_sections">
+            <div>
+                <h2 class="individual_headings">Spending time with loved ones</h2>
+                <p>
+                    ladida
+                </p>
+            </div>
+            <div class="pics">
+                <IMG SRC="Images/photo_family.avif">
+            </div>
+        </section>
+        <section class="about_sections">
+            <div>
+                <h2 class="individual_headings">Spending time with loved ones</h2>
+                <p>
+                    ladida
+                </p>
+            </div>
+            <div class="pics">
+                <IMG SRC="Images/photo_family.avif">
+            </div>
         </section>
     </body>
 </div>
