--- a/index.html
+++ b/index.html
@@ -20,17 +20,36 @@
   </header>
   <section class="item_wrapper">
     <div class="default_padding">
-      <h2 class="creator"> Creator</h2>
-      <p>
-        I love to swim not
+      <h2 class="description"> Creator, Connector, Nurturer</h2>
+      <h3 class="individual_headings"> Creator</h3>
+      <p class="paragraphs">
+        I love to create. If there is something I want to do, and can't find the best tool to assist, then I'm likely
+        looking at ways to combine what's already out there to interact the way I'd like, or working on a way to create
+        whatever it is that I'm looking for. I can't wait to have the knowledge to take the ideas that I have in my
+        head, and put them into code, and eventually onto people's phones.
+      </p>
+      <h3 class="individual_headings">Connector</h3>
+      <p class="paragraphs">
+        I'm always looking for new ways to make connections, with and for people. If anyone ever needs a
+        reccommendation, I will likely be one of the first to jump in and
+        begin finding a resource in my connection pool. I'm also interested in finding new ways to help people reach
+        their goals, both personally and professionally. If I can assist in any way at all... I will.
+      </p>
+      <h3 class="individual_headings">Nurturer</h3>
+      <p class="paragraphs">
+        Nurturing and building up the people around me is probably what brings me the most joy. I love to see others
+        excel, and if I can assist in furthering their success in anyway, I will strive to find a way to do so.
       </p>
     </div>
     <div class="img">
       <img class="self_image" src="Images/Ari2.jpg" style="width: 250px;" height="330px">
     </div>
   </section>
-  <p>
-    "Quote"
+  <p class="quote">
+    "Be the change you wish to see in the world."
+  </p>
+  <p class="quote">
+    -Gandhi
   </p>
 </body>
 
