final website for turning it

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,22 +18,58 @@
             <a href="portfolio.html"> Portfolio</a>
         </nav>
     </header>
-    <section class="padded_box">
-        <h2> My projects in no order</h2>
-        <div class="first">
-            <h3>
-                The first project
-            </h3>
+    <h2 class="description"> Career Highlights</h2>
+    <p class="side_note" style="border-bottom: 2px solid black;">
+        While I have yet to complete a website or mobile application, I do have many transferrable skills that I've
+        learned over the years that I plan to apply in this next endeavor.
+    </p>
+    <section class="about_sections">
+        <div>
+            <h2 class="individual_headings" style="margin-top: 0;"> Project Assistant</h2>
             <p>
-                I worked for the church daycare
+                My first job after graduating college was as a project assistant for a construction company. I learned
+                many valuable skills, including how to manage projects from beginning to end. I learned the importance
+                of scheduling, and thorough documentation. I also got a lot of practice in prioritizing, and juggling
+                multiple tasks with competing deadlines.
             </p>
         </div>
-        <div class="first">
-            </divclass>
-            <h3> My Second Project</h3>
-            <p>
-                I worked at Opa
+        <div class="pics">
+            <IMG SRC="https://images.unsplash.com/photo-1524862655266-89c67a10c4b3?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8dG8lMjBkbyUyMGxpc3RzfGVufDB8fDB8fHwy"
+                width="400" height="275">
+        </div>
+    </section>
+    <section class="about_sections">
+        <div class="pics">
+            <IMG SRC="https://images.unsplash.com/photo-1637763723578-79a4ca9225f7?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8aW5zdXJhbmNlJTIwYWdlbnR8ZW58MHx8MHx8fDI%3D"
+                style="margin-left: 10px;">
+        </div>
+        <div>
+            <h2 class="individual_headings" style="margin-right: 20px;"> Insurance Agent</h2>
+            <p style="margin-right: 20px;">
+                After leaving the construction role, I went into Insurance for a bit. I learned many valuable skills
+                there as well, including the importance of providing great customer service. As many of us know, it can
+                be challenging when you're constantly dealing with people calling in who are upset with your product, or
+                prices, etc. The more you interact with the customers, the easier it gets to manage their expectations,
+                and to put them at ease with your knowledge, and ability to support them and make it right however
+                possible.
             </p>
+        </div>
+    </section>
+    <section class="about_sections">
+        <div>
+            <h2 class="individual_headings"> Executive Assistant</h2>
+            <p>
+                My two roles prior to my current role of an exxecutive assistant, both prepared me for the job. While
+                all of the jobs that I've had are different, they all have many things that overlap. As an executive
+                assistant, I not only have to manage my own schedule and competing priorities, but also be sure that the
+                schedules for all four leaders I support are in order. This role combines project management, customer
+                service, and being an assistant all into one job. My goal on a daily basis is to manage priorities and
+                schedules, and make sure that my customers (aka my bosses) are satisfied at the end of the day.
+            </p>
+        </div>
+        <div class="pics">
+            <IMG SRC="https://images.unsplash.com/photo-1513128034602-7814ccaddd4e?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGV4ZWN1dGl2ZSUyMGFzc2lzdGFudHxlbnwwfHwwfHx8Mg%3D%3D"
+                width="400" height="275">
         </div>
     </section>
 </body>
