final project to submit

--- a/index.html
+++ b/index.html
@@ -48,9 +48,53 @@
   <p class="quote">
     "Be the change you wish to see in the world."
   </p>
-  <p class="quote">
+  <p class="quote" style="font-size: 2em;">
     -Gandhi
   </p>
+  <article class="form">
+    <section>
+      <h2 style="color: blueviolet;">Interested in Connecting?</h2>
+      <p>Please provide your information below and I will reach out to you shortly!</p>
+      <form action="./survey_results.html">
+        <label for="first">First Name:</label>
+        <input name="first" type="text">
+        <label for="last">Last Name:</label>
+        <input name="last" type="text">
+        <p>
+          <label for="email">Email:</label>
+          <input name="email" type="email">
+        </p>
+      </form>
+    </section>
+    <Section>
+      <p>
+        Please rate your likelyhood to return to our site.
+      </p>
+      <p>
+      <form action="survey_results.html">
+        <label>
+          3
+          <input name="likeliness_recurrence" type="radio">
+        </label>
+        <label>
+          2
+          <input name="likeliness_recurrence" type="radio">
+        </label>
+        <label>
+          1
+          <input name="likeliness_recurrence" type="radio">
+        </label>
+      </form>
+      </p>
+      <p style="font-style: italic; font-size: 13px" ;>3 being very likely, 1 being not likely at all.
+      </p>
+      <p>
+      <form action="survey_results.html">
+        <input class="submit_btn" type="submit">
+      </form>
+      </p>
+    </Section>
+  </article>
 </body>
 
 </html>
